; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-empress.c_ts_init_encoder.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-empress.c_ts_init_encoder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.saa7134_dev = type { i32, i32 }

@core = common dso_local global i32 0, align 4
@init = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.saa7134_dev*)* @ts_init_encoder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ts_init_encoder(%struct.saa7134_dev* %0) #0 {
  %2 = alloca %struct.saa7134_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.saa7134_dev* %0, %struct.saa7134_dev** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.saa7134_dev*, %struct.saa7134_dev** %2, align 8
  %5 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %8 [
    i32 130, label %7
    i32 129, label %7
    i32 128, label %7
  ]

7:                                                ; preds = %1, %1, %1
  store i32 1, i32* %3, align 4
  br label %8

8:                                                ; preds = %1, %7
  %9 = load %struct.saa7134_dev*, %struct.saa7134_dev** %2, align 8
  %10 = call i32 @ts_reset_encoder(%struct.saa7134_dev* %9)
  %11 = load %struct.saa7134_dev*, %struct.saa7134_dev** %2, align 8
  %12 = load i32, i32* @core, align 4
  %13 = load i32, i32* @init, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @saa_call_all(%struct.saa7134_dev* %11, i32 %12, i32 %13, i32 %14)
  %16 = load %struct.saa7134_dev*, %struct.saa7134_dev** %2, align 8
  %17 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %16, i32 0, i32 1
  store i32 1, i32* %17, align 4
  ret i32 0
}

declare dso_local i32 @ts_reset_encoder(%struct.saa7134_dev*) #1

declare dso_local i32 @saa_call_all(%struct.saa7134_dev*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
